--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ sudo: false
 
 env:
   global:
-    - CODECOV_TOKEN="5c684457-157f-4e35-9cff-ee6d20868e5b"
+    - CODECOV_TOKEN="ed6d92d3-a015-4cbf-be5e-000b3b366a86"
 
 # после выполнения сборки запустить скрипт, который будет собирать статистику по JaCoCo
 # Здесь используется сторонни сервис https://codecov.io/
@@ -17,6 +17,6 @@ after_success:
 notifications:
   email:
     recipients:
-      -rail.shamsemukhametov@mail.ru
+      -ivlasov.spb@gmail.com
     on_success: never # default: change
     on_failure: always # default: always
